# tradingapp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
CodeKeeping/: Changelog.md  Debug.md  Decisions.md  Integrations.md  Performance.md  Progress.md
Meta/: Plugins.md  Skills.md
api/: auth.py  database.py  main.py  middleware.py  models.py  redis_client.py  requirements.txt  websocket.py
api/routes/: analytics.py  auth.py  broker.py  calendar.py  ea.py  journal.py  signals.py
app/: App.tsx  babel.config.js  package.json  tsconfig.json
backtest/: __init__.py  executor.py  harness.py  metrics.py  optimizer.py  reporter.py
broker/: correlation.py  execution.py  metaapi.py  risk_guards.py
config/: day_of_week_modifiers.yaml  kill_zones.yaml  parameters.yaml  spreads.yaml  weights.yaml
data/: __init__.py  dukascopy_downloader.py  loader.py  news_reactions.py  resampler.py  validator.py
ea/: README.md  made_EA_MT4.mq4  made_EA_MT5.mq5
engine/: __init__.py  aggregator.py  conflict_templates.py  postmortem.py  regime.py  signal.py  signal_decay.py  signal_generator.py  tp_sl.py
engine/modules/: __init__.py  bollinger.py  ema.py  fvg.py  kill_zones.py  macd.py  (+5 more)
live/: engine_runner.py  shadow_monitor.py  shadow_runner.py
notifications/: apns.py  notification_manager.py
telegram_bot/: bot.py  formatters.py  scheduler.py
tests/: __init__.py  test_aggregator.py  test_api.py  test_bollinger.py  test_broker.py  test_data_acquisition.py  test_ema.py  test_engine_extras.py  test_fvg.py  test_harness.py  test_kill_zones.py  test_live_providers.py  test_macd.py  test_market_structure.py  test_order_blocks.py  test_ote.py  test_regime.py  test_rsi.py  test_shadow_monitor.py  test_signal_generator.py  test_support_resistance.py  test_telegram_bot.py  test_tp_sl.py
web/: index.html  package-lock.json  package.json
(+50 files in other folders)
